<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.github.loadingview.LoadingView
        android:id="@+id/loadingView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:lv_duration="30"
        app:lv_end_color="@color/color_end"
        app:lv_external_radius="24dp"
        app:lv_internal_radius="4dp"
        app:lv_start_color="@color/color_start" />



    <TextView
        android:id="@+id/tvTitleDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textViewBold"
        android:text="@string/Man_Trap_Rescue_operation"
        android:layout_marginTop="@dimen/size_8"
        android:layout_marginStart="@dimen/size_8"
        android:padding="@dimen/size_4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageButton
        android:id="@+id/ibCross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorMassaedPrimary"
        android:src="@drawable/ic_cross"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleDialog"
        app:layout_constraintTop_toTopOf="@id/tvTitleDialog"
        android:layout_marginEnd="@dimen/size_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/dividerTitle"
        android:layout_margin="@dimen/size_8"
        android:background="@color/barchart_line"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <LinearLayout
        android:id="@+id/linearContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/dividerTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginStart="@dimen/size_8"
            android:layout_marginEnd="@dimen/size_8"

            android:paddingRight="@dimen/size_10"
            android:background="@drawable/rounded_box_background">

            <Spinner
                android:id="@+id/issue_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_45"
                android:layout_toLeftOf="@id/img1"
                android:background="@null"
                android:prompt="@string/spinner_hint"
                android:dropDownWidth="wrap_content"
                android:dropDownVerticalOffset="@dimen/text_45"
                android:forceHasOverlappingRendering="false"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/size_5"
                android:spinnerMode="dropdown"
                android:textSize="@dimen/text_size_14" />
            <ImageView
                android:id="@+id/img1"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                />

        </RelativeLayout>



        <EditText
            android:paddingLeft="@dimen/size_10"
            android:paddingTop="@dimen/size_10"
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_100"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/size_10"
            android:maxLines="6"
            android:imeOptions="actionNext"
            android:gravity="start"
            android:layout_margin="@dimen/size_8"
            android:layout_weight="1"
            android:hint="@string/remarks"
            android:inputType="textCapSentences|textMultiLine"
            android:background="@drawable/rounded_grey_background"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14"
            />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/size_10"
        android:textColor="@color/white"
        android:text="@string/save"

        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintTop_toBottomOf="@id/linearContent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/dimen_16"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/size_10"
        android:textColor="@color/colorMassaedPrimary"
        android:text="@string/cancel"
        android:layout_marginEnd="@dimen/dimen_16"
        android:textSize="@dimen/text_size_12"
        app:strokeColor="@null"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintTop_toTopOf="@id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btnSave"
        />


</androidx.constraintlayout.widget.ConstraintLayout>